# acsa

./: .dockerignore  .env.local.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  NOTICE  README.md  RELEASING.md  ROADMAP.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  fly.toml
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  connector_submission.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
acsa_agent_system/: AGENT_RULES.md  TASK_STATE.md  prompts.md  structured_system.md
acsa_blueprint/: 01_overview.md  02_foundation.md  03_engine.md  04_nodes.md  05_connectors.md  06_ui.md  07_observability.md  08_distribution.md  09_release.md  10_security.md  README.md
connectors/ai-news-brief-renderer/: README.md  main.py  manifest.json  sample-input.json
connectors/ai-news-collector/: README.md  main.py  manifest.json  requirements.txt  sample-params.json
connectors/git-release-snapshot/: README.md  main.py  manifest.json
connectors/gsheets-reader/: main.py  manifest.json
connectors/gsheets-writer/: main.py  manifest.json
connectors/lead-qualifier/: main.py  manifest.json
connectors/output-formatter/: main.py  manifest.json
core/: Cargo.toml  build.rs
core/src/: asset_store.rs  cli.rs  connectors.rs  engine.rs  lib.rs  main.rs  models.rs  n8n_import.rs  observability.rs  product_state.rs  starter_connector_packs.rs  storage.rs  triggers.rs  version.rs
core/src/nodes/: ai.rs  human.rs  integration.rs  logic.rs  mod.rs
deploy/: docker-compose.yml
docs/: README.md  api-reference.md  architecture.md  connector-development.md  deployment.md  getting-started.md  observability.md  security.md  ui-manual.md  user-guide.md  workflow-schema.md
examples/: README.md
scripts/: bootstrap-dev.sh  dev-stack.sh  install.sh  package-release.sh  security-audit.sh
ui/: next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
workflows/: ai-news-intelligence-demo.yaml  approval-demo.yaml  conditional-demo.yaml  hello.yaml  manual-demo.yaml  startup-opportunity-pipeline.yaml  webhook-demo.yaml
(+132 files in other folders)
