[package]
name = "acsa-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
petgraph = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1.0"

[lints.rust]
warnings = "deny"
