[package]
name = "acsa-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
build = "build.rs"
default-run = "acsa-core"

[[bin]]
name = "acsa-core"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1"
axum = { version = "0.8.6", default-features = false, features = ["http1", "json", "original-uri", "query", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
cron = "0.13.0"
dotenvy = "0.15.7"
extism = "1.13.0"
hmac = "0.12"
sha2 = "0.10"
shlex = "1.3.0"
subtle = "2.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
petgraph = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lints.rust]
warnings = "deny"
